full-moon/tests/roblox_cases/fail/parser/string-interpolation-double-brace/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/parser/string-interpolation-double-brace
---
error[ast]: unexpected double brace, try \{ if you meant to escape
  ┌─ source.lua:1:7
  │
1 │ _ = `{{}}`
  │       ^

error[ast]: expected expression after `{`
  ┌─ source.lua:1:5
  │
1 │ _ = `{{}}`
  │     ^^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:8
  │
1 │ _ = `{{}}`
  │        ^


